--- a/index.html
+++ b/index.html
@@ -1,5 +1,74 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bikcraft</title>
+  <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+
+  <header class="header">
+    <a href="#" class="logo">D<span>oc</span>e B<span>ol</span>o</a>
+
+    <nav aria-label="primária">
+      <ul class="menu">
+        <li><a href="/">Sobre</a></li>
+        <li><a href="/">Produtos</a></li>
+        <li><a href="/">Lojas</a></li>
+        <li><a href="/">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <article class="conteudo" aria-labelledby="label-introducao">
+      <div class="introducao">
+        <h1 id="label-introducao">Lorem, ipsum
+        </h1>
+        <p>dolor sit amet consectetur adipisicing elit. Incidunt dolores ab quis laboriosam ut modi aliquam nisi nostrum, odit, saepe accusamus obcaecati voluptate numquam repudiandae laudantium ducimus, deserunt quo nobis.</p>
+        <a class="botao" href="/">Ver Mais</a>
+      </div>
+      <div class="introducao-cover">
+        <img src="./img/bicicleta.jpg" alt="Bicicleta Bikcraft Preta">
+      </div>
+    </article>
+
+    <article class="conteudo conteudo-vantagem" aria-labelledby="label-vantagens">
+      <h2 class="subtitulo" id="label-vantagens">Vantagens Bolos</h2>
+      <ul class="vantagens">
+        <li class="vantagens-item">
+          <img src="./img/icons-bolo.png" alt="">
+          <h3>Lorem ipsum
+          </h3>
+          <p>dolor sit amet consectetur adipisicing elit. Sint nisi officiis doloribus ratione molestias rem hic facere veritatis eos ab quasi vel, autem mollitia architecto optio sit, officia harum nemo.</p>
+        </li>
+        <li class="vantagens-item">
+          <img src="./img/icons-bolo.png" alt="">
+          <h3>Lorem ipsum/h</h3>
+          <p>dolor sit amet consectetur adipisicing elit. Sint nisi officiis doloribus ratione molestias rem hic facere veritatis eos ab quasi vel, autem mollitia architecto optio sit, officia harum nemo..</p>
+        </li>
+        <li class="vantagens-item">
+          <img src="./img/icons-bolo.png" alt="">
+          <h3>Lorem ipsum</h3>
+          <p>dolor sit amet consectetur adipisicing elit. Sint nisi officiis doloribus ratione molestias rem hic facere veritatis eos ab quasi vel, autem mollitia architecto optio sit, officia harum nemo.</p>
+        </li>
+      </ul>
+    </article>
+  </main>
+
+  <footer class="rodape">
+    <p>luiz henrique. Alguns Direitos Reservados.</p>
+  </footer>
+</body>
+
+</html>
+
+
+<!-- <!DOCTYPE html>
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -101,7 +170,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d470400.41082501516!2d-43.726182406682916!3d-22.913252461913554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bde559108a05b%3A0x50dc426c672fd24e!2sRio%20de%20Janeiro%2C%20RJ!5e0!3m2!1spt-BR!2sbr!4v1662759011904!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     
-  </section> -->
+  </section> 
 
   </main>
 
@@ -111,4 +180,4 @@
   
 </body>
 
-</html>
+</html>-->
