--- a/index.html
+++ b/index.html
@@ -25,15 +25,37 @@
 
   <main>
     <article class="conteudo" aria-labelledby="label-introducao">
+
       <div class="introducao">
         <h1 id="label-introducao">Lorem, ipsum
         </h1>
         <p>dolor sit amet consectetur adipisicing elit. Incidunt dolores ab quis laboriosam ut modi aliquam nisi nostrum, odit, saepe accusamus obcaecati voluptate numquam repudiandae laudantium ducimus, deserunt quo nobis.</p>
         <a class="botao" href="/">Ver Mais</a>
       </div>
-      <div class="introducao-cover">
-        <img src="./img/bicicleta.jpg" alt="Bicicleta Bikcraft Preta">
+
+      <div class="introducao-cover animais">
+        <ul class="animais-lista" data-tab="menu">
+          <li>
+            <img src="img/happy-birthday-g47ed6f372_1920.jpg">
+          </li>
+          <li>
+            <img src="img/happy-birthday-g47ed6f372_1920.jpg">
+          </li>
+          <li>
+            <img src="img/happy-birthday-g47ed6f372_1920.jpg">
+          </li>
+          <li>
+            <img src="img/happy-birthday-g47ed6f372_1920.jpg">
+          </li>
+          <li>
+            <img src="img/happy-birthday-g47ed6f372_1920.jpg">
+          </li>
+          <li>
+            <img src="img/happy-birthday-g47ed6f372_1920.jpg">
+          </li>
+        </ul>
       </div>
+
     </article>
 
     <article class="conteudo conteudo-vantagem" aria-labelledby="label-vantagens">
