--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
 
   <main>
-    <article class="conteudo" aria-labelledby="label-introducao">
+    <section class="conteudo" aria-labelledby="label-introducao">
 
       <div class="introducao">
         <h1 id="label-introducao">Lorem, ipsum
@@ -56,9 +56,9 @@
         </ul>
       </div>
 
-    </article>
+    </section>
 
-    <article class="conteudo conteudo-vantagem" aria-labelledby="label-vantagens">
+    <section class="conteudo conteudo-vantagem" aria-labelledby="label-vantagens">
       <h2 class="subtitulo" id="label-vantagens">Vantagens Bolos</h2>
       <ul class="vantagens">
         <li class="vantagens-item">
@@ -78,9 +78,9 @@
           <p>dolor sit amet consectetur adipisicing elit. Sint nisi officiis doloribus ratione molestias rem hic facere veritatis eos ab quasi vel, autem mollitia architecto optio sit, officia harum nemo.</p>
         </li>
       </ul>
-    </article>
+    </section>
 
-    <article class="conteudo">
+    <section class="conteudo">
            
       <div class="section4_sobre">
         
@@ -110,9 +110,9 @@
               </p>
           </div>
       </div>
-  </article>
+  </section>
 
-  <article class="fale_conosco">
+  <section class="fale_conosco">
     <form
       action="https://formsubmit.co/luizhenriquejob4@gmail.com"
       method="POST"
@@ -132,7 +132,7 @@
     </form>
 
         <iframe class="fale_conosco_mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d470400.41082501516!2d-43.726182406682916!3d-22.913252461913554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bde559108a05b%3A0x50dc426c672fd24e!2sRio%20de%20Janeiro%2C%20RJ!5e0!3m2!1spt-BR!2sbr!4v1662759011904!5m2!1spt-BR!2sbr" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</article>
+</section>
   </main>
 
   <footer class="rodape">
