--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <a class="botao" href="/">Ver Mais</a>
       </div>
 
-      <div class="introducao-cover animais">
-        <ul class="animais-lista" data-tab="menu">
+      <div class="introducao-cover bolos">
+        <ul class="bolos-lista" data-tab="menu">
           <li>
             <img src="img/happy-birthday-g47ed6f372_1920.jpg">
           </li>
@@ -82,7 +82,7 @@
 
     <section class="conteudo">
            
-      <div class="section4_sobre">
+      <div class="conteudo-sobre">
         
         <h3>Horários Delivery:</h3>
         <p>Segunda a Sábado: entre 07 e 17h <br>
@@ -103,7 +103,7 @@
       </div>
 
       <div class="rotacionar">                  
-          <div class="section4_sobre_img_valor">
+          <div class="conteudo-sobre_img_valor">
               <img src="img/valor.png" alt="valor" width="300px">
               <p>
                   Entregas a partir de <br> R$21,00
