--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a class="botao" href="/">Ver Mais</a>
       </div>
 
-      <div class="introducao-cover bolos">
+      <div class=" bolos">
         <ul class="bolos-lista" data-tab="menu">
           <li>
             <img src="img/happy-birthday-g47ed6f372_1920.jpg">
@@ -82,7 +82,8 @@
 
     <section class="conteudo">
            
-      <div class="conteudo-sobre">
+      <div class="conteudo-sobre">  
+        <h1>Contato</h1>
         
         <h3>Horários Delivery:</h3>
         <p>Segunda a Sábado: entre 07 e 17h <br>
