--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DoceBolo</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="estyle/style.css">
 </head>
 
 <body>
