--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="/">Sobre</a></li>
         <li><a href="/">Produtos</a></li>
         <li><a href="/">Lojas</a></li>
-        <li><a href="/">Contato</a></li>
+        <li><a href="./formSuccess/formsubmit.html">Contato</a></li>
       </ul>
     </nav>
   </header>
