--- a/formsubmit.html
+++ b/formsubmit.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="formSuccess.css">
+    <link rel="stylesheet" href="./formSuccess/formSuccess.css">
     <title>Mensagem | Luiz Henrique</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
             <img src="img/mensagem-enviada.svg" alt="">
         </div>
 
-        <a href="../index.html">Clique aqui para voltar</a>
+        <a href="./index.html">Clique aqui para voltar</a>
     </div>
 </body>
 </html>
