--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <input
         type="hidden"
         name="_next"
-        value="https://luizhenr1que.github.io/SiteBolos/formSuccess/formsubmit.html"/>
+        value="http://127.0.0.1:5500/formsubmit.html"/>
       <button type="submit">Enviar</button>
     </form>
 
