--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <nav aria-label="primária">
       <ul class="menu">
         <li><a href="/">Sobre</a></li>
-        <li><a href="/">Produtos</a></li>
+        <li><a href="cardapio.html">Cardapio</a></li>
         <li><a href="/">Lojas</a></li>
-        <li><a href="./formSuccess/formsubmit.html">Contato</a></li>
+        <li><a href="">Contato</a></li>
       </ul>
     </nav>
   </header>
