--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav aria-label="primária">
       <ul class="menu">
         <li><a href="/">Sobre</a></li>
-        <li><a href="cardapio.html">Cardapio</a></li>
+        <li><a href="catalogo.html">Catálogo</a></li>
         <li><a href="/">Lojas</a></li>
         <li><a href="">Contato</a></li>
       </ul>
