--- a/catalogo.html
+++ b/catalogo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo</title>
-    <link rel="stylesheet" href="/estyle/catalogo.css ">
+    <link rel="stylesheet" href="estyle/catalogo.css">
 </head>
 <body>
     <header class="header">
@@ -37,7 +37,7 @@
              por <span>R$: 130,00</span>
             </p>
           </div>
-          
+
           <div>
             <h3>kit 1</h3>
             <img src="img/happy-birthday-g47ed6f372_1920.jpg" alt="">
