--- a/catalogo.html
+++ b/catalogo.html
@@ -64,6 +64,29 @@
              </p>
           </div>
         </div>
+
+        <div class=" bolos">
+          <ul class="bolos-lista" data-tab="menu">
+            <li>
+              <img src="img/happy-birthday-g47ed6f372_1920.jpg">
+            </li>
+            <li>
+              <img src="img/happy-birthday-g47ed6f372_1920.jpg">
+            </li>
+            <li>
+              <img src="img/happy-birthday-g47ed6f372_1920.jpg">
+            </li>
+            <li>
+              <img src="img/happy-birthday-g47ed6f372_1920.jpg">
+            </li>
+            <li>
+              <img src="img/happy-birthday-g47ed6f372_1920.jpg">
+            </li>
+            <li>
+              <img src="img/happy-birthday-g47ed6f372_1920.jpg">
+            </li>
+          </ul>
+        </div>
        </section>
        
     </main>
