--- a/catalogo.html
+++ b/catalogo.html
@@ -21,77 +21,59 @@
         </nav>
     </header>
     <main>
-       <section class="titulo-conteudo">
-          <h1>Kit festa</h1>
-       </section>
-
-       <section class="conteudo">
-
-        <div class="kit-festa">  
-
-          <div>
-            <h3>kit 1</h3>
-            <img src="img/happy-birthday-g47ed6f372_1920.jpg" alt="">
-
-            <p> Bolo 10 fatias + 20 docinhos + 10 cupcakes
-             por <span>R$: 130,00</span>
-            </p>
-          </div>
-
-          <div>
-            <h3>kit 1</h3>
-            <img src="img/happy-birthday-g47ed6f372_1920.jpg" alt="">
-
-            <p> Bolo 10 fatias + 20 docinhos + 10 cupcakes
-             por <span>R$: 130,00</span>
-            </p>
-          </div>
-
-          <div>
-            <h3>kit 2</h3>
-            <img src="img/happy-birthday-g47ed6f372_1920.jpg" alt="">
-
-            <p> Bolo 20 fatias + 20 docinhos + 12 cupcakes por <span>R$: 170,00</span>
-             </p>
-          </div>
-
-          <div>
-            <h3>kit 3</h3>
-            <img src="img/happy-birthday-g47ed6f372_1920.jpg" alt="">
-
-            <p> Bolo 40 fatias + 100 docinhos + 20 cupcakes
-              por <span>R$: 270,00</span>
-             </p>
-          </div>
+      <section class="conteudo">
+        <div class="titulo">
+          <h1>Catalogo</h1>
         </div>
 
-        <div class=" bolos">
-          <ul class="bolos-lista" data-tab="menu">
-            <li>
-              <img src="img/happy-birthday-g47ed6f372_1920.jpg">
-            </li>
-            <li>
-              <img src="img/happy-birthday-g47ed6f372_1920.jpg">
-            </li>
-            <li>
-              <img src="img/happy-birthday-g47ed6f372_1920.jpg">
-            </li>
-            <li>
-              <img src="img/happy-birthday-g47ed6f372_1920.jpg">
-            </li>
-            <li>
-              <img src="img/happy-birthday-g47ed6f372_1920.jpg">
-            </li>
-            <li>
-              <img src="img/happy-birthday-g47ed6f372_1920.jpg">
-            </li>
-          </ul>
+        <div class="recheios">
+          <h1>Recheios:</h1>
+          <p>Coco cremoso</p>
+          <p>Abacaxi com coco</p>
+          <p>Prestío</p>
+          <p>Paçoca</p>
+          <p>Doce de leite</p>
+          <p>Chocolate gourmet</p>
         </div>
-       </section>
-       
+      </section>
+
+      <section class="conteudo kit" aria-labelledby="label-conteudo kit">
+
+        <div class="foto-kit1">
+          <img src="img/happy-birthday-g47ed6f372_1920.jpg" alt="">
+        </div>
+  
+        <div class="conteudo-kit">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt eveniet adipisci, eos aperiam praesentium aut ea maxime tempore quasi nostrum quos fugiat quisquam, delectus quia error in minima esse doloribus.</p>
+        </div>
+      </section>
+
+      <section class="conteudo kit" aria-labelledby="label-introducao">
+
+        <div class="foto-kit1">
+          <img src="img/happy-birthday-g47ed6f372_1920.jpg" alt="">
+        </div>
+  
+        <div class="conteudo-kit">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt eveniet adipisci, eos aperiam praesentium aut ea maxime tempore quasi nostrum quos fugiat quisquam, delectus quia error in minima esse doloribus.</p>
+        </div>
+      </section>
+
+      <section class="conteudo kit" aria-labelledby="label-introducao">
+
+        <div class="foto-kit1">
+          <img src="img/happy-birthday-g47ed6f372_1920.jpg" alt="">
+        </div>
+  
+        <div  class="conteudo-kit">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt eveniet adipisci, eos aperiam praesentium aut ea maxime tempore quasi nostrum quos fugiat quisquam, delectus quia error in minima esse doloribus.</p>
+        </div>
+      </section>
     </main>
 
     <footer>
     </footer>
+
+  
 </body>
 </html>
