--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       </div>
     </section>
 
-    <section class="conteudo conteudo-vantagem" aria-labelledby="label-vantagens">
-      <h2 class="subtitulo" id="label-vantagens">Vantagens Bolos</h2>
+    <section class="conteudo conteudo-vantagem">
+      <h2 class="subtitulo">Vantagens Bolos</h2>
       <ul class="vantagens">
         <li class="vantagens-item">
           <img src="./img/icons-bolo.png" alt="">
