--- a/catalogo.html
+++ b/catalogo.html
@@ -44,7 +44,9 @@
         </div>
   
         <div class="conteudo-kit">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt eveniet adipisci, eos aperiam praesentium aut ea maxime tempore quasi nostrum quos fugiat quisquam, delectus quia error in minima esse doloribus.</p>
+          <h3>Kit 1</h3>
+          <p>Bolo 10 fatias + 20 docinhos + 10 cupcakes</p>
+          <p style="color: green;">por R$ 129,99</p>
         </div>
       </section>
 
@@ -55,7 +57,9 @@
         </div>
   
         <div class="conteudo-kit">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt eveniet adipisci, eos aperiam praesentium aut ea maxime tempore quasi nostrum quos fugiat quisquam, delectus quia error in minima esse doloribus.</p>
+          <h3>Kit 2</h3>
+          <p>Bolo 20 fatias + 20 docinhos + 12 cupcakes</p>
+          <p style="color: green;">por R$ 169,99</p>
         </div>
       </section>
 
@@ -66,7 +70,9 @@
         </div>
   
         <div  class="conteudo-kit">
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt eveniet adipisci, eos aperiam praesentium aut ea maxime tempore quasi nostrum quos fugiat quisquam, delectus quia error in minima esse doloribus.</p>
+          <h3>Kit 3</h3>
+          <p>Bolo 100 fatias + 100 docinhos + 20 cupcakes</p>
+          <p style="color: green;">por R$ 270,99</p>
         </div>
       </section>
     </main>
