--- a/catalogo.html
+++ b/catalogo.html
@@ -40,7 +40,7 @@
       <section class="conteudo kit" aria-labelledby="label-conteudo kit">
 
         <div class="foto-kit1">
-          <img src="img/happy-birthday-g47ed6f372_1920.jpg" alt="">
+          <img src="img/rejane-bolo.jpeg" alt="">
         </div>
   
         <div class="conteudo-kit">
@@ -53,7 +53,7 @@
       <section class="conteudo kit" aria-labelledby="label-introducao">
 
         <div class="foto-kit1">
-          <img src="img/happy-birthday-g47ed6f372_1920.jpg" alt="">
+          <img src="img/rejane-bolo.jpeg" alt="">
         </div>
   
         <div class="conteudo-kit">
@@ -66,7 +66,7 @@
       <section class="conteudo kit" aria-labelledby="label-introducao">
 
         <div class="foto-kit1">
-          <img src="img/happy-birthday-g47ed6f372_1920.jpg" alt="">
+          <img src="img/rejane-bolo.jpeg" alt="">
         </div>
   
         <div  class="conteudo-kit">
