--- a/catalogo.html
+++ b/catalogo.html
@@ -96,7 +96,7 @@
 
       </section>
 
-      <section class="conteudo-kit" aria-labelledby="label-conteudo kit">
+      <section class="conteudo-bolo conteudo-kit" aria-labelledby="label-conteudo kit">
 
         <div class="kit">
           <img src="img/rejane-bolo.png" alt="">
@@ -104,6 +104,7 @@
           <h3>Kit 1</h3>
           <p>Bolo 10 fatias + 20 docinhos + 10 cupcakes</p>
           <p style="color: green;">por R$ 129,99</p>
+          <a class="botao" href="/">Eu quero</a>
         </div>
 
         <div class="kit">
@@ -112,6 +113,7 @@
           <h3>Kit 2</h3>
           <p>Bolo 20 fatias + 20 docinhos + 12 cupcakes</p>
           <p style="color: green;">por R$ 169,99</p>
+          <a class="botao" href="/">Eu quero</a>
         </div>
 
         <div class="kit">
@@ -120,6 +122,7 @@
           <h3>Kit 2</h3>
           <p>Bolo 20 fatias + 20 docinhos + 12 cupcakes</p>
           <p style="color: green;">por R$ 169,99</p>
+          <a class="botao" href="/">Eu quero</a>
         </div>
       </section>
     </main>
