--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <p>luiz henrique. Alguns Direitos Reservados.</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="./script/script.js"></script>
 </body>
 
 </html>
