--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
   <footer class="rodape">
     <p>luiz henrique. Alguns Direitos Reservados.</p>
   </footer>
+  
+  <link rel="stylesheet" href="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-button.css">
+  <a id="robbu-whatsapp-button" class="left" target="_blank" href="https://api.whatsapp.com/send?phone=21993163478&text=Ol%C3%A1%20seja%20bem%20vindo%20!">
+    <div class="rwb-tooltip">Envie sua mensagem.</div>
+    <img src="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-icon.svg">
+  </a>
 
   <script src="./script/script.js"></script>
 </body>
