--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </section>
 
     <section class="conteudo conteudo-vantagem">
-      <h2 class="subtitulo">Vantagens Bolos</h2>
+      <h2 class="subtitulo">Promoçãos</h2>
       <ul class="vantagens">
         <li class="vantagens-item">
           <img src="./img/icons-bolo.png" alt="">
