--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <section class="conteudo " aria-labelledby="label-introducao">
 
       <div class="introducao">
-        <h1 id="label-introducao">Lorem, ipsum
+        <h1 id="label-introducao">Seja bem-vindo! 
         </h1>
-        <p>dolor sit amet consectetur adipisicing elit. Incidunt dolores ab quis laboriosam ut modi aliquam nisi nostrum, odit, saepe accusamus obcaecati voluptate numquam repudiandae laudantium ducimus, deserunt quo nobis.</p>
+        <p> Oferecemos bolos para todas as ocasiões, seja para um evento especial ou para uma noite simples entre amigos. Ficamos felizes em ajudar você a encontrar o bolo perfeito para o seu evento.</p>
         <a class="botao" href="/">Ver Mais</a>
       </div>
 
@@ -79,11 +79,10 @@
         <p>Segunda a Sábado: entre 07 e 17h <br>
           Domingo: entre 9h e 12h</p>
 
-          <p><img src="img/ico-tel.png" alt="ico-tel">(21) 00000000 
+          <p><img src="img/ico-tel.png" alt="ico-tel">(21) 996316-3478 
               <br>
-          <img src="img/ico-end.png" alt="ico-end"> Rio de Janeiro - baixada 
+          <img src="img/ico-end.png" alt="ico-end"> Rio de Janeiro - Nova Iguaçu 
               <br>
-          <img src="img/ico-email.png" alt="Contato"> contato@projeto.com.br
           </p>
 
           <h3>Horário de Atendimento:</h3>
@@ -101,25 +100,7 @@
       </div>
   </section>
 
-  <section class=" conteudo fale_conosco">
-    <form
-      action="https://formsubmit.co/luizhenriquejob4@gmail.com"
-      method="POST"
-      class="form">
-      <label for="name">Nome</label>
-      <input type="text" name="name" id="name" required />
-      <label for="email">E-mail</label>
-      <input type="email" name="email" id="email" required />
-      <label for="message">Mensagem</label>
-      <textarea name="message" id="message" required></textarea>
-      <input type="hidden" name="_captcha" value="false" />
-      <input
-        type="hidden"
-        name="_next"
-        value="http://127.0.0.1:5500/formsubmit.html"/>
-      <button type="submit">Enviar</button>
-    </form>
-
+  <section class="conteudo fale_conosco">
       <iframe class="fale_conosco_mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d470400.41082501516!2d-43.726182406682916!3d-22.913252461913554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bde559108a05b%3A0x50dc426c672fd24e!2sRio%20de%20Janeiro%2C%20RJ!5e0!3m2!1spt-BR!2sbr!4v1662759011904!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </section>
   </main>
