--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="pt-br">
 <html>
 
 <head>
@@ -6,25 +7,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DoceBolo</title>
   <link rel="stylesheet" href="estyle/style.css">
+  <link rel="shortcut icon" href="./img/cake.png" />
 </head>
 
 <body>
 
   <header class="header">
-    <a href="#" class="logo">D<span>oc</span>e B<span>ol</span>o</a>
+    <a href="./index.html" class="logo">D<span>oc</span>e B<span>ol</span>o</a>
 
     <nav aria-label="primária">
       <ul class="menu">
-        <li><a href="/">Sobre</a></li>
+        <li><a href="#conteudo">Sobre</a></li>
         <li><a href="catalogo.html">Catálogo</a></li>
-        <li><a href="/">Lojas</a></li>
-        <li><a href="">Contato</a></li>
+        <li><a href="#contato">Contato</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <section class="conteudo " aria-labelledby="label-introducao">
+    <section class="conteudo" id="conteudo" aria-labelledby="label-introducao">
 
       <div class="introducao">
         <h1 id="label-introducao">Seja bem-vindo! 
@@ -50,19 +51,19 @@
 
     <section class="conteudo conteudo-vantagem">
       <h2 class="subtitulo">Promoçãos</h2>
-      <ul class="vantagens">
-        <li class="vantagens-item">
+      <ul class="promocao">
+        <li class="promocao-item">
           <img src="./img/icons-bolo.png" alt="">
           <h3>Lorem ipsum
           </h3>
           <p>dolor sit amet consectetur adipisicing elit. Sint nisi officiis doloribus ratione molestias rem hic facere veritatis eos ab quasi vel, autem mollitia architecto optio sit, officia harum nemo.</p>
         </li>
-        <li class="vantagens-item">
+        <li class="promocao-item">
           <img src="./img/icons-bolo.png" alt="">
           <h3>Lorem ipsum/h</h3>
           <p>dolor sit amet consectetur adipisicing elit. Sint nisi officiis doloribus ratione molestias rem hic facere veritatis eos ab quasi vel, autem mollitia architecto optio sit, officia harum nemo..</p>
         </li>
-        <li class="vantagens-item">
+        <li class="promocao-item">
           <img src="./img/icons-bolo.png" alt="">
           <h3>Lorem ipsum</h3>
           <p>dolor sit amet consectetur adipisicing elit. Sint nisi officiis doloribus ratione molestias rem hic facere veritatis eos ab quasi vel, autem mollitia architecto optio sit, officia harum nemo.</p>
@@ -70,7 +71,7 @@
       </ul>
     </section>
 
-    <section class="conteudo">
+    <section id="contato" class="conteudo">
            
       <div class="conteudo-sobre">  
         <h1>Contato</h1>
@@ -101,7 +102,8 @@
   </section>
 
   <section class="conteudo fale_conosco">
-      <iframe class="fale_conosco_mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d470400.41082501516!2d-43.726182406682916!3d-22.913252461913554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bde559108a05b%3A0x50dc426c672fd24e!2sRio%20de%20Janeiro%2C%20RJ!5e0!3m2!1spt-BR!2sbr!4v1662759011904!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+      <iframe class="fale_conosco_mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3677.5148804857326!2d-43.59895503551079!3d-22.820432840531453!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99588049d92a47%3A0xa1e10bfdb334a66b!2sR.%20Mezenga%20-%20Jardim%20Para%C3%ADso%2C%20Nova%20Igua%C3%A7u%20-%20RJ%2C%2026297-195!5e0!3m2!1spt-BR!2sbr!4v1680129086200!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </section>
   </main>
 
