--- a/catalogo.html
+++ b/catalogo.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo</title>
     <link rel="stylesheet" href="estyle/catalogo.css">
+    <link rel="shortcut icon" href="./img/cake.png" />
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">D<span>oc</span>e B<span>ol</span>o</a>
+        <a href="./index.html" class="logo">D<span>oc</span>e B<span>ol</span>o</a>
     
         <nav aria-label="primária">
           <ul class="menu">
-            <li><a href="/">Sobre</a></li>
-            <li><a href="/">Produtos</a></li>
-            <li><a href="/">Lojas</a></li>
-            <li><a href="./formSuccess/formsubmit.html">Contato</a></li>
+            <li><a href="./index.html">Sobre</a></li>
+        <li><a href="catalogo.html">Catálogo</a></li>
+        <li><a href="https:https://wa.me/5521993163478/wa.me/5521993163478" target="_blank">Contato</a></li>
           </ul>
         </nav>
     </header>
