--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   </main>
 
   <footer class="rodape">
-    <p>luiz henrique. Alguns Direitos Reservados.</p>
+    <p>© DoceBolo Alguns Direitos Reservados.</p>
   </footer>
   
   <link rel="stylesheet" href="https://cdn.positus.global/production/resources/robbu/whatsapp-button/whatsapp-button.css">
